@@ -4,6 +4,7 @@
 -Change: Remember dimensions of the sub-windows and dialogs
 -Fix: Handle internal ReplayGain calculation properly
 -Fix: Drop directories onto the ReplayGain tool window
+-Fix: Don't accept dropping tracks onto albums with different codec or sampling rate in the ReplayGain tool
 
 1.6.3:
 -Add: Brazilian Portuguese translation (by André Marcelo Alvarenga)
